styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  color: white;
  font-family: 'Cabin', Arial, Helvetica, sans-serif;
}

body {
  width: 100vw;
  background: #014201;
  height: fit-content;
}

.flex {
  display: flex;
}

.spacer {
  height: 500px;
}

h1 {
  font-family: 'Cabin', Arial, Helvetica, sans-serif;
}
h2 {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-size: 25px;
}
h3 {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-weight: 300;
}
p {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  font-size: 20px;
  line-height: 28px;
}
span {
  font-weight: 900;
  text-decoration: underline;
  font-size: 21px;
  color: greenyellow;
  cursor: pointer;
}

.top {
  width: 100vw;
  height: 70vh;
  object-fit: cover;
}
.top.gradient {
  position: absolute;
  left: 0;
  top: 0;
  background: linear-gradient(
    0deg,
    rgba(1, 66, 1, 1) 0%,
    rgba(255, 255, 255, 0) 67%
  );
  z-index: 1;
}
.top.textbox {
  position: absolute;
  left: 0;
  top: 0;
  padding-top: 60vh;
  padding-left: 10vw;
  width: auto;
  color: white;
  z-index: 2;
}
h1.top.text {
  font-size: 45px;
  height: fit-content;
  width: fit-content;
}
h2.top.text {
  font-size: 25px;
  font-weight: 400;
  height: fit-content;
  width: fit-content;
}
h3.top.text {
  padding: 15px;
  padding-left: 0;
  height: fit-content;
  width: fit-content;
}

.contentbox {
  padding: 5vw 10vw;
}
.contentbox p {
  padding-top: 10px;
}
.contentbox img {
  padding-top: 25px;
  width: 100%;
  height: 33.3vh;
  border-bottom-right-radius: 50px;
  border-top-left-radius: 50px;
  object-fit: cover;
}
.contentbox .credits {
  padding-top: 10px;
}

